--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "joi": "^17.13.3",
+    "moment": "^2.30.1",
     "mysql2": "^3.11.4",
     "nodemailer": "^6.9.16",
     "passport-google-oauth20": "^2.0.0",
