--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "cross-env NODE_ENV=production node dist/main",
     "start:dev": "cross-env NODE_ENV=development npx nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:pro": "cross-env NODE_ENV=production npx nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+    "start:prod": "pm2 start ecosystem.config.js --env production",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
