--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,5 +26,28 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run build --if-present
-    - run: npm run start:prod
+        
+    - name: build api server file
+      working-directory: ./
+      run: npm run build --if-present
+
+    - name: build api server file
+      run: zip -r 123home.zip ./dist ./scripts ./src ./.eslintrc.js ./gitignore ./.prettierrc ./appspec.yml ./.production.env ./ecosystem.config.js ./package.json ./package-lock.json ./nest-cli.json ./README.md ./tsconfig.build.json ./tsconfig.json ./webpack-hmr.config.js
+
+    - name: AWS configure credentials
+      uses: aws-actions/configure-aws-credentials@v3
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+
+    - name: upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./123home.zip s3://123home-build/deploy/
+
+    - name: deploy with AWS codeDeploy
+      run: aws deploy create-deployment
+        --application-name 123home-deploy
+        --deployment-config-name CodeDeployDefault.OneAtATime
+        --deployment-group-name GROUP
+        --s3-location bucket=123home-build,bundleType=zip,key=deploy/123home.zip
+   
