--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,9 @@ jobs:
         
     - name: build api server file
       working-directory: ./
-      run: npm run build --if-present
+      run: |
+          yarn
+          yarn run build
 
     - name: build api server file
       run: zip -r 123home.zip ./dist ./scripts ./src ./.eslintrc.js ./gitignore ./.prettierrc ./appspec.yml ./.production.env ./ecosystem.config.js ./package.json ./package-lock.json ./nest-cli.json ./README.md ./tsconfig.build.json ./tsconfig.json ./webpack-hmr.config.js
