--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,6 @@ jobs:
       run: aws deploy create-deployment
         --application-name 123home-deploy
         --deployment-config-name CodeDeployDefault.OneAtATime
-        --deployment-group-name GROUP
+        --deployment-group-name 123home-deploy-group
         --s3-location bucket=123home-build,bundleType=zip,key=deploy/123home.zip
    
